--- a/public/socials.html
+++ b/public/socials.html
@@ -40,7 +40,7 @@
 
       #instaButton {
         background: url("https://image.freepik.com/free-vector/instagram-background-gradient-colors_23-2147821882.jpg")
-          no-repeat scroll 0 0 transparent;
+          no-repeat 0 0 transparent;
         color: white;
       }
 
